[ENTESB-20714]ensure all CXF tests passed with JDK17
(cherry picked from commit 2bf06ec7081f5d34c9023086a5eebbb8c610d520)